public/stylesheets/spinintro.css
.content-container {
    position: absolute;
    top: 2.5%;
    left: 50%;
    transform: translateX(-50%);
}
.logo-container {
    position: relative;
    width: 40%;
    max-width: 18vh;
    height: auto;
    left: 50%;
    transform: translateX(-50%);
}
.logo-container .top-logo {
    margin-top: 50px;
    width: 100%;
    height: auto;
}

.graphic-container {
    width: 100vw;
    max-width: 60vh;
    position: relative;
    text-align: center;
    left: 50%;
    transform: translateX(-50%);
    padding-bottom: 20px;
}
.graphic-container:after {
    content: "";
    position: absolute;
    bottom: 0px;
    left: 50%;
    transform: translateX(-50%);
    width: 80%;
}
.graphic-container .graphic {
    width: 80%;
    height: 40vh;
    position: relative;
    margin: 20px 0px;
}
.graphic-container .graphic-pieces {
    position: relative;
}
.graphic-container .win-rides-button {
    width: 70%;
}

.text-container {
    padding: 30px 0px;
    opacity: 0;
    transition: 0.5s;
}
.text-container a {
    text-decoration: none;
}
.text-container a h2 {
    text-decoration: none;
    color: white;
    padding: 15px 0px;
    transition: 0.3s;
    transition-timing-function: cubic-bezier(.4, -0.5, 0, 1.2);
}
.text-container a h2 i {
    transition: 0.3s;
    transition-timing-function: cubic-bezier(.4, -0.5, 0, 1.2);
}
.text-container a:hover h2 i {
    margin-left: 5px;
}

.graphic .stars {
    position: absolute;
    top: 0%;
    width: 85%;
    height: auto;
    left: 17%;
    z-index: -999;
}

.graphic .spinner {
    position: absolute;
    left: 37%;
    width: 65%;
    height: auto;
    top: 4%;
}

.graphic .phone {
    position: absolute;
    left: 20%;
    width: 35%;
    height: auto;
    top: 6%;
}
.spin {
    animation: spin 3s infinite;
    /* animation-timing-function: linear; */
}
@-moz-keyframes spin {
    from { -moz-transform: rotate(0deg); }
    to { -moz-transform: rotate(360deg); }
}
@-webkit-keyframes spin {
    from { -webkit-transform: rotate(0deg); }
    to { -webkit-transform: rotate(360deg); }
}
@keyframes spin {
    from {transform:rotate(0deg);}
    to {transform:rotate(360deg);}
}

@media (orientation: portrait) {
    .logo-container {
        width: 40%;
        max-width: 23vh;
    }
    .graphic-container {
        width: 50vh;
        min-width: 20vh;
        max-width: 100vw;
    }
    .graphic-container .graphic {
        width: 90%;
        min-height: 30vh;
        max-height: 70vw;
    }
}

